--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Network RPC URLs
 MAINNET_RPC_URL=https://mainnet.infura.io/v3/your-api-key
 GOERLI_RPC_URL=https://goerli.infura.io/v3/your-api-key
+MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
 
 # Contract Addresses
 MAINNET_MARKETPLACE_ADDRESS=0x...
