--- a/.env
+++ b/.env
@@ -17,6 +17,9 @@ IPFS_PINNING_SERVICE=pinata
 PINATA_API_KEY=your-pinata-api-key
 PINATA_SECRET_KEY=your-pinata-secret-key
 
+PRIVATE_KEY=your_private_key
+INFURA_KEY=your_infura_key
+
 # App Configuration
 APP_URL=https://nftmarketplace.com
 SUPPORT_EMAIL=support@nftmarketplace.com
